--- a/contact.html
+++ b/contact.html
@@ -438,11 +438,11 @@
                         <h3>Email Here</h3>
                         <p><a href="/cdn-cgi/l/email-protection#dfb7bab3b3b09fb2babbb6a9bef1bcb0b2"><span
                                     class="__cf_email__"
-                                    data-cfemail="9cf4f9f0f0f3dcf1f9f8f5eafdb2fff3f1">[email&#160;protected]</span></a>
+                                    data-cfemail="9cf4f9f0f0f3dcf1f9f8f5eafdb2fff3f1">mychilddr@gmail.com</span></a>
                         </p>
                         <p><a href="/cdn-cgi/l/email-protection#0b787e7b7b64797f4b666e6f627d6a25686466"><span
                                     class="__cf_email__"
-                                    data-cfemail="a9dadcd9d9c6dbdde9c4cccdc0dfc887cac6c4">[email&#160;protected]</span></a>
+                                    data-cfemail="a9dadcd9d9c6dbdde9c4cccdc0dfc887cac6c4">info@childdr.com</span></a>
                         </p>
                     </div>
                 </div>
@@ -454,7 +454,10 @@
                         </div>
 
                         <h3>Location Here</h3>
-                        <p>175 5th Ave Premium Area, New York, NY 10010, United States</p>
+                        <p>Shri Hari Child Clinic
+                            Carter road no 3
+                            Yogi Darshan A/3 , makwana nagar, Near Savitribai fule hospital WEH
+                            Borivali East Mumbai 400066</p>
                     </div>
                 </div>
 
@@ -465,8 +468,8 @@
                         </div>
 
                         <h3>Call Here</h3>
-                        <p><a href="tel:1234567890">+123 456 7890</a></p>
-                        <p><a href="tel:2414524526">+241 452 4526</a></p>
+                        <p><a href="tel:9879891082">+91 98798 91082</a></p>
+                        <!-- <p><a href="tel:2414524526">+241 452 4526</a></p> -->
                     </div>
                 </div>
             </div>
