--- a/index.html
+++ b/index.html
@@ -797,7 +797,8 @@
 					<div class="overview-image">
 						<img src="assets/img/overview/overview-1.png" alt="image" />
 
-						<a href="https://youtu.be/rOA5XoDfLQY?si=EVcWTTZZWl3PSvC4" class="video-btn popup-youtube">
+						<a href="https://www.youtube.com/watch?v=uvevHUPQ-04&ab_channel=ChildDrCare"
+							class="video-btn popup-youtube">
 							<i class="flaticon-play"></i>
 						</a>
 					</div>
