--- a/services.html
+++ b/services.html
@@ -432,8 +432,9 @@
             <div class="section-title">
                 <h2>Specialized Services</h2>
                 <div class="bar"></div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua ut enim ad minim veniam, quis nostrud exercitation ullamco labor.</p>
+                <p>Pediatricians are kid's best friends in the world of medicine! These special doctors are experts in
+                    children's health, from babies to teens. They make sure kids grow healthy and strong, keeping smiles
+                    on their faces.</p>
             </div>
 
             <div class="row">
@@ -464,10 +465,12 @@
 
                         <div class="services-content">
                             <h3>
-                                <a href="services-details.html">Bariatric Surgery</a>
+                                <a href="services-details.html">Endocrinology</a>
                             </h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                                ut labore et dolore magna aliqua.</p>
+                            <p>Pediatric endocrinologists are like superheroes for kids' hormones! They're doctors who
+                                help when hormones misbehave, like in diabetes or growth problems. They use their
+                                knowledge to bring balance and happiness to our bodies. So, if you ever need an
+                                endocrinology doctor, know they're here to save the day!.</p>
                         </div>
                     </div>
                 </div>
@@ -481,10 +484,12 @@
 
                         <div class="services-content">
                             <h3>
-                                <a href="services-details.html">Heart Transplant</a>
+                                <a href="services-details.html">Gastroenterology</a>
                             </h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                                ut labore et dolore magna aliqua.</p>
+                            <p>Gastroenterology doctors are like detectives for our tummies! They help when our
+                                stomachs, intestines, or liver have trouble. They use special tools and tests to solve
+                                digestive mysteries, making our bellies happy again. So, if your tummy needs a hero, a
+                                gastroenterology doctor is the one to call!</p>
                         </div>
                     </div>
                 </div>
@@ -540,20 +545,6 @@
                     </div>
                 </div>
 
-                <div class="col-lg-12 col-md-12">
-                    <div class="pagination-area">
-                        <a href="#" class="prev page-numbers">
-                            <i class='flaticon-left-arrow'></i>
-                        </a>
-                        <a href="#" class="page-numbers">1</a>
-                        <span class="page-numbers current" aria-current="page">2</span>
-                        <a href="#" class="page-numbers">3</a>
-                        <a href="#" class="page-numbers">4</a>
-                        <a href="#" class="next page-numbers">
-                            <i class='flaticon-right-arrow'></i>
-                        </a>
-                    </div>
-                </div>
             </div>
         </div>
     </section>
