--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -428,6 +428,13 @@
     <!-- Start Terms of Service Area -->
     <section class="terms-of-service-area ptb-100">
         <div class="container">
+            <h6>To read our privacy and policy please click <a href="#" style="color: #1e88e5;"
+                    onclick="downloadPDF()">Here</a></h6>
+            <!-- <button>Download PDF</button> -->
+            <!-- <button type="button" onclick="downloadPDF()" class="contact-us-btn btn default-btn" value="Contact Us">
+                Contact Us
+            </button> -->
+            <h2>READ THE FOLLOWING MOST FAQ</h2>
             <div class="terms-of-service-accordion">
                 <ul class="accordion">
                     <li class="accordion-item">
@@ -437,9 +444,7 @@
                         </a>
 
                         <p class="accordion-content show">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo
-                            viverra maecenas accumsan lacus vel facilisis.
+                            Check the Contact page. Navigate from Header menu.
                         </p>
                     </li>
 
@@ -450,9 +455,7 @@
                         </a>
 
                         <p class="accordion-content">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo
-                            viverra maecenas accumsan lacus vel facilisis.
+                            Not at all, We do not pay any money for reviews.
                         </p>
                     </li>
 
@@ -463,9 +466,7 @@
                         </a>
 
                         <p class="accordion-content">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo
-                            viverra maecenas accumsan lacus vel facilisis.
+                            No as of now we serve on web application as well as whatsapp, soon we will update you.
                         </p>
                     </li>
 
@@ -476,9 +477,8 @@
                         </a>
 
                         <p class="accordion-content">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo
-                            viverra maecenas accumsan lacus vel facilisis.
+                            Just click on Consult with doctor from header. You will be redirected to whatsapp. Now
+                            follow the process.
                         </p>
                     </li>
 
@@ -489,9 +489,7 @@
                         </a>
 
                         <p class="accordion-content">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo
-                            viverra maecenas accumsan lacus vel facilisis.
+                            Yes you can find the PDF from DOWNLOAD T&C button. Every customer adviced to read it first.
                         </p>
                     </li>
 
@@ -502,95 +500,115 @@
                         </a>
 
                         <p class="accordion-content">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo
-                            viverra maecenas accumsan lacus vel facilisis.
-                        </p>
-                    </li>
-
-                    <li class="accordion-item">
-                        <a class="accordion-title" href="javascript:void(0)">
-                            <i class='bx bx-plus'></i>
-                            How Do I Contact Customer Services?
-                        </a>
-
-                        <p class="accordion-content">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo
-                            viverra maecenas accumsan lacus vel facilisis.
-                        </p>
-                    </li>
-
-                    <li class="accordion-item">
-                        <a class="accordion-title" href="javascript:void(0)">
-                            <i class='bx bx-plus'></i>
-                            Do Doctor Pay For Good Reviews?
-                        </a>
-
-                        <p class="accordion-content">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo
-                            viverra maecenas accumsan lacus vel facilisis.
-                        </p>
-                    </li>
-
-                    <li class="accordion-item">
-                        <a class="accordion-title" href="javascript:void(0)">
-                            <i class='bx bx-plus'></i>
-                            Does has Healthcare Mobile App
-                        </a>
-
-                        <p class="accordion-content">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo
-                            viverra maecenas accumsan lacus vel facilisis.
-                        </p>
-                    </li>
-
-                    <li class="accordion-item">
-                        <a class="accordion-title" href="javascript:void(0)">
-                            <i class='bx bx-plus'></i>
-                            How Patient Can Consult With online Doctor?
-                        </a>
-
-                        <p class="accordion-content">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo
-                            viverra maecenas accumsan lacus vel facilisis.
-                        </p>
-                    </li>
-
-                    <li class="accordion-item">
-                        <a class="accordion-title" href="javascript:void(0)">
-                            <i class='bx bx-plus'></i>
-                            Does Has a Privacy Policy?
-                        </a>
-
-                        <p class="accordion-content">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo
-                            viverra maecenas accumsan lacus vel facilisis.
-                        </p>
-                    </li>
-
-                    <li class="accordion-item">
-                        <a class="accordion-title" href="javascript:void(0)">
-                            <i class='bx bx-plus'></i>
-                            Can You Contact My Doctor For Me?
-                        </a>
-
-                        <p class="accordion-content">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo
-                            viverra maecenas accumsan lacus vel facilisis.
+                            No, Since it is fast and easy process to consult with your doctor. try it out.
                         </p>
                     </li>
                 </ul>
             </div>
+            &nbsp;
+            &nbsp;
+            &nbsp;
+            <p>
+
+
+                Thank you for choosing CHIDLDR for your online consultations. We are committed to protecting
+                your privacy and ensuring the security of your personal and health information. This Privacy Policy
+                outlines
+                how we collect, use, disclose, and safeguard your information during online consultations.
+            </p>
+            <p>
+            <h2> Information We Collect</h2>
+            </p>
+            <p>
+                <b>Personal Information:</b> We may collect personal details like your name, contact information, date
+                of birth, and medical history to provide effective consultations.
+            </p>
+            <p>
+                <b>Health Information:</b> During consultations, our healthcare professionals may collect medical
+                information to offer accurate assessments and recommendations.
+            </p>
+            <p>
+            <h2>How We Use Your Information</h2>
+            </p>
+            <p>
+                <b>Provide Consultations:</b> We use your information to deliver healthcare services, including
+                diagnosis,
+                treatment, and advice.
+            </p>
+            <p>
+                <b>Improve Services:</b> Your data helps us enhance our services, conduct research, and develop new
+                features.
+            </p>
+            <p>
+                <b>Communication:</b> We may contact you for appointment reminders, follow-ups, or important updates.
+            </p>
+            <p>
+            <h2>Information Security</h2>
+            </p>
+            <p>
+                We implement strict security measures to protect your information from unauthorized access, disclosure,
+                or
+                alteration.
+                Data Sharing
+            </p>
+            <p>
+                We do not share your information with third parties without your explicit consent, except as required by
+                law.
+                Your Rights
+            </p>
+            <p>
+                You have the right to access, correct, or delete your personal and health information.
+                Cookies and Tracking
+            </p>
+            <p>
+                We use cookies and tracking technologies to improve website functionality and analyze user behavior.
+                Third-Party Links
+            </p>
+            <p>
+                Our website may contain links to third-party websites. We are not responsible for their privacy
+                practices.
+                Children's Privacy
+            </p>
+            <p>
+                Our services are not intended for children under 18 years old, and we do not knowingly collect their
+                information.
+                Changes to this Privacy Policy
+            </p>
+            <p>
+                We may update this policy periodically. Any changes will be posted on our website.
+                Contact Us
+            </p>
+            <p>
+                If you have questions or concerns about your privacy, please contact us at [Your Contact Information].
+                Compliance with Regulations
+            </p>
+            <p>
+                We comply with all relevant healthcare privacy laws and regulations, such as HIPAA (in the United
+                States) or
+                GDPR (in the European Union).
+            </p>
+            <p>
+                Our healthcare professionals are trained to uphold the highest standards of confidentiality.
+            </p>
         </div>
     </section>
     <!-- End Terms of Service Area -->
+    <script>
+        function downloadPDF() {
+            // Replace 'your_pdf_file.pdf' with the actual path to your PDF file.
+            const pdfURL = 'privacy.pdf';
 
+            // Create an anchor element to trigger the download.
+            const link = document.createElement('a');
+            link.href = pdfURL;
+
+            // Set the download attribute to specify the file name.
+            link.download = 'your_pdf_filename.pdf';
+
+            // Trigger a click event on the anchor element.
+            link.click();
+        }
+    </script>
 
     <section class="footer-area bg-color pt-100 pb-70">
         <div class="container">
