"child dr link"

--- a/index.html
+++ b/index.html
@@ -1385,7 +1385,7 @@
 		$(document).ready(function () {
 			function doctorMemberList() {
 				$.ajax({
-					url: "http://localhost:3000/users/doctor-member-list",
+					url: "https://childdr-nodejs1.onrender.com/users/doctor-member-list",
 					method: "POST",
 					dataType: "json",
 					data: {
