"css link update"

--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
-    <link rel="stylesheet" href="/assets/css/stick-icon.css">
+    <link rel="stylesheet" href="./assets/css/stick-icon.css">
 
     <!-- Start Sticky Icon -->
     <div class="sticky-icon">
@@ -921,100 +921,100 @@
     </section>
     <!-- End Overview Area -->
 
-	<!-- Start Footer Area -->
-	<section class="footer-area bg-color pt-100 pb-70">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-3 col-sm-6">
-					<div class="single-footer-widget">
-						<a style="
+    <!-- Start Footer Area -->
+    <section class="footer-area bg-color pt-100 pb-70">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3 col-sm-6">
+                    <div class="single-footer-widget">
+                        <a style="
 									color: #BF40BF;
 									font-size: 1.4rem;
 									font-weight: 500;
 								" class="navbar-brand" href="index.html">
-							CHILDDR
-						</a>
-						<p>
-							Boost your child's health and happiness with our digital firm's online consultations
-							designed specifically for kids. Our team of experienced pediatric specialists provides
-							convenient, confidential Whether
-							addressing medical concerns or developmental milestones, we are committed to ensuring
-							your child's well-being
-						</p>
+                            CHILDDR
+                        </a>
+                        <p>
+                            Boost your child's health and happiness with our digital firm's online consultations
+                            designed specifically for kids. Our team of experienced pediatric specialists provides
+                            convenient, confidential Whether
+                            addressing medical concerns or developmental milestones, we are committed to ensuring
+                            your child's well-being
+                        </p>
 
-						<ul class="footer-social">
-							<li>
-								<a href="https://www.facebook.com/Child-Health-SOS-111802571651605/" target="_blank">
-									<i class="bx bxl-facebook"></i>
-								</a>
-							</li>
-							<li>
-								<a href="#" target="_blank">
-									<i class="bx bxl-twitter"></i>
-								</a>
-							</li>
-							<li>
-								<a href="https://pin.it/3i6Grn0" target="_blank">
-									<i class="bx bxl-pinterest-alt"></i>
-								</a>
-							</li>
-							<li>
-								<a href="https://www.linkedin.com/company/child-health-sos/" target="_blank">
-									<i class="bx bxl-linkedin"></i>
-								</a>
-							</li>
-						</ul>
-					</div>
-				</div>
+                        <ul class="footer-social">
+                            <li>
+                                <a href="https://www.facebook.com/Child-Health-SOS-111802571651605/" target="_blank">
+                                    <i class="bx bxl-facebook"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" target="_blank">
+                                    <i class="bx bxl-twitter"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://pin.it/3i6Grn0" target="_blank">
+                                    <i class="bx bxl-pinterest-alt"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://www.linkedin.com/company/child-health-sos/" target="_blank">
+                                    <i class="bx bxl-linkedin"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
 
-				<div class="col-lg-3 col-sm-6">
-					<div class="single-footer-widget">
-						<h2>Get In Touch</h2>
+                <div class="col-lg-3 col-sm-6">
+                    <div class="single-footer-widget">
+                        <h2>Get In Touch</h2>
 
-						<ul class="footer-contact-info">
-							<li>
-								<i class="bx bxs-phone"></i>
-								<span>Phone</span>
-								<a href="tel:882569756">882-569-756</a>
-							</li>
-							<li>
-								<i class="bx bx-envelope"></i>
-								<span>Email</span>
-								<a href="/cdn-cgi/l/email-protection#f8909d949497b8959d9c918e99d69b9795"><span
-										class="__cf_email__"
-										data-cfemail="a2cac7cececde2cfc7c6cbd4c38cc1cdcf">mychilddr@gmail.com</span></a>
-							</li>
-							<li>
-								<i class="bx bx-map"></i>
-								<span>Address</span>
-								175 5th Ave Premium Area, UK
-							</li>
-						</ul>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- End Footer Area -->
+                        <ul class="footer-contact-info">
+                            <li>
+                                <i class="bx bxs-phone"></i>
+                                <span>Phone</span>
+                                <a href="tel:882569756">882-569-756</a>
+                            </li>
+                            <li>
+                                <i class="bx bx-envelope"></i>
+                                <span>Email</span>
+                                <a href="/cdn-cgi/l/email-protection#f8909d949497b8959d9c918e99d69b9795"><span
+                                        class="__cf_email__"
+                                        data-cfemail="a2cac7cececde2cfc7c6cbd4c38cc1cdcf">mychilddr@gmail.com</span></a>
+                            </li>
+                            <li>
+                                <i class="bx bx-map"></i>
+                                <span>Address</span>
+                                175 5th Ave Premium Area, UK
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End Footer Area -->
 
-	<!-- Start Copy Right Area -->
-	<div class="copyright-area bg-color">
-		<div class="container">
-			<div class="copyright-area-content">
-				<p>
-					Copyright @
-					<script>
-						document.write(new Date().getFullYear());
-					</script>
-					childdr. All Rights Reserved by
-					<a href="https://childdr.org/" target="_blank">
-						CHILDDR
-					</a>
-				</p>
-			</div>
-		</div>
-	</div>
-	<!-- End Copy Right Area -->
+    <!-- Start Copy Right Area -->
+    <div class="copyright-area bg-color">
+        <div class="container">
+            <div class="copyright-area-content">
+                <p>
+                    Copyright @
+                    <script>
+                        document.write(new Date().getFullYear());
+                    </script>
+                    childdr. All Rights Reserved by
+                    <a href="https://childdr.org/" target="_blank">
+                        CHILDDR
+                    </a>
+                </p>
+            </div>
+        </div>
+    </div>
+    <!-- End Copy Right Area -->
 
     <!-- Start Go Top Area -->
     <div class="go-top">
