--- a/index.html
+++ b/index.html
@@ -78,130 +78,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" />
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
 		integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
-	<style>
-		.sticky-icon {
-			z-index: 9999;
-			position: fixed;
-			top: 25%;
-			right: 0;
-			width: 220px;
-			display: flex;
-			flex-direction: column;
-			align-items: flex-end;
-			/* Align the icons to the right */
-		}
-
-		.sticky-icon a {
-			border-radius: 50px 0 0 50px;
-			text-align: left;
-			margin: 2px;
-			text-decoration: none;
-			text-transform: uppercase;
-			padding: 10px;
-			font-size: 22px;
-			font-family: "Oswald", sans-serif;
-			transition: all 0.8s;
-			display: flex;
-			align-items: center;
-			/* Align text and icon vertically */
-		}
-
-		.sticky-icon a:hover {
-			color: #fff;
-			transform: translateX(0);
-		}
-
-		.sticky-icon a:hover i {
-			transform: rotate(360deg);
-		}
-
-		.Facebook {
-			background-color: #2c80d3;
-			color: #fff;
-		}
-
-		.Youtube {
-			background-color: #fa0910;
-			color: #fff;
-		}
-
-		.Twitter {
-			background-color: #53c5ff;
-			color: #fff;
-		}
-
-		.Instagram {
-			background-color: #fd1d1d;
-			color: #fff;
-		}
-
-		.Google {
-			background-color: #d34836;
-			color: #fff;
-		}
-
-		.sticky-icon a i {
-			background-color: #fff;
-			height: 40px;
-			width: 40px;
-			color: #000;
-			text-align: center;
-			line-height: 40px;
-			border-radius: 50%;
-			transition: all 0.5s;
-		}
-
-		.sticky-icon a i.fa-facebook-f {
-			background-color: #fff;
-			color: #2c80d3;
-		}
-
-		.sticky-icon a i.fa-google-plus-g {
-			background-color: #fff;
-			color: #d34836;
-		}
-
-		.sticky-icon a i.fa-instagram {
-			background-color: #fff;
-			color: #fd1d1d;
-		}
-
-		.sticky-icon a i.fa-youtube {
-			background-color: #fff;
-			color: #fa0910;
-		}
-
-		.sticky-icon a i.fa-twitter {
-			background-color: #fff;
-			color: #53c5ff;
-		}
-
-		#myBtn {
-			height: 50px;
-			display: none;
-			position: fixed;
-			bottom: 20px;
-			right: 30px;
-			z-index: 99;
-			text-align: center;
-			padding: 10px;
-			line-height: 40px;
-			border: none;
-			outline: none;
-			background-color: #1e88e5;
-			color: white;
-			cursor: pointer;
-			border-radius: 50%;
-		}
-
-		.fa-arrow-circle-up {
-			font-size: 30px;
-		}
-
-		#myBtn:hover {
-			background-color: #555;
-		}
-	</style>
+	<link rel="stylesheet" href="./assets/css/stick-icon.css">
 
 	<!-- Start Sticky Icon -->
 	<div class="sticky-icon">
