--- a/about.html
+++ b/about.html
@@ -142,7 +142,7 @@
                         <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
                             <ul class="navbar-nav m-auto">
                                 <li class="nav-item">
-                                    <a href="/" class="nav-link"> Home </a>
+                                    <a href="index.html" class="nav-link"> Home </a>
                                 </li>
                                 <li class="nav-item">
                                     <a href="about.html" class="nav-link">
@@ -357,9 +357,9 @@
                             </li>
                         </ul>
 
-                        <div class="about-btn">
+                        <!-- <div class="about-btn">
                             <a href="about.html" class="default-btn">More About Us</a>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -571,7 +571,7 @@
     <!-- End Team Area -->
 
     <!-- Start Pricing Area -->
-    <section class="pricing-area pt-100 pb-70">
+    <!-- <section class="pricing-area pt-100 pb-70">
         <div class="container">
             <div class="tab pricing-list-tab">
                 <ul class="tabs">
@@ -883,7 +883,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- End Pricing Area -->
 
     <!-- Start Overview Area -->
@@ -901,9 +901,9 @@
                             libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod
                             maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus.</p>
 
-                        <div class="overview-btn">
+                        <!-- <div class="overview-btn">
                             <a href="#" class="default-btn">Contact Us</a>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
 
