--- a/doctors.html
+++ b/doctors.html
@@ -142,7 +142,7 @@
                         <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
                             <ul class="navbar-nav m-auto">
                                 <li class="nav-item">
-                                    <a href="/" class="nav-link"> Home </a>
+                                    <a href="index.html" class="nav-link"> Home </a>
                                 </li>
                                 <li class="nav-item">
                                     <a href="about.html" class="nav-link">
