--- a/index.html
+++ b/index.html
@@ -254,9 +254,7 @@
 								<div class="main-banner-inner">
 									<div class="main-banner-content">
 										<h1>
-											WE SPECIALIZE IN PAEDIATRIC CARE
-											<br />
-											A Safe Care For Your Children’s Health
+											We Are Specialize in Mother Child Health  Care. A safe Care support with Telemedicine For Your Journey From Pregnancy To Parenthood.
 										</h1>
 										<p>
 											We are available digitally to solve health issues.
@@ -325,7 +323,7 @@
 															<label class="contact-us-icon"><i
 																	class="icon flaticon-calendar"></i></label>
 															<button type="button" class="form-control btn default-btn">
-																Book Appointment
+																Click Here to Connect with Us !
 															</button>
 														</div>
 													</a>
